Fixing mobile horizontal scroll and improving insert inputs errors

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -67,6 +67,7 @@ button{
     margin-left: 400px;
     height: 100vh;
     overflow-y: scroll;
+    overflow-x: hidden;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -91,7 +92,6 @@ button{
         width: 100%;
         height: auto;
         padding: 80px 32px;
-
         .load_tweets{
             width: 100%;
             height: auto;
